--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,23 +1,26 @@
 <header class="header">
   <div class="header__container">
-    <a href="#" class="header__logo">
-      WIRED<span class="text-accent">BRIDGE</span>
+    <a href="./#hero" class="header__logo">
+      Wired<span class="text-accent">Bridge</span>.
     </a>
 
     <nav class="header__nav">
       <ul class="header__menu">
-        <li class="header__item"><a href="#" class="header__link">Главная</a></li>
-        <li class="header__item"><a href="#platform" class="header__link">Платформа</a></li>
-        <li class="header__item"><a href="#benefits" class="header__link">Возможности</a></li>
-        <li class="header__item"><a href="#blog" class="header__link">Блог</a></li>
-        <li class="header__item"><a href="#faq" class="header__link">FAQ</a></li>
+        <li class="header__item"><a href="./#about" class="header__link">Платформа</a></li>
+        <li class="header__item"><a href="./#benefits" class="header__link">Преимущества</a></li>
+        <li class="header__item"><a href="./#innovations" class="header__link">Инновации</a></li>
+        <li class="header__item"><a href="./#blog" class="header__link">Блог</a></li>
       </ul>
     </nav>
 
     <div class="header__actions">
-      <a href="#contact" class="btn btn--small">Контакты</a>
+      <a href="./#contact" class="header__cta">
+        <span>Связаться</span>
+        <i data-lucide="arrow-up-right"></i>
+      </a>
       <button class="header__burger" aria-label="Menu">
-        <i data-lucide="menu"></i>
+        <span></span>
+        <span></span>
       </button>
     </div>
   </div>
